generated/src/antlr4/QueryModificationParser.ts
// Generated from src/antlr4/QueryModification.g4 by ANTLR 4.6-SNAPSHOT


import { ATN } from 'antlr4ts/atn/ATN';
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer';
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException';
import { NotNull } from 'antlr4ts/Decorators';
import { NoViableAltException } from 'antlr4ts/NoViableAltException';
import { Override } from 'antlr4ts/Decorators';
import { Parser } from 'antlr4ts/Parser';
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext';
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator';
import { ParseTreeListener } from 'antlr4ts/tree/ParseTreeListener';
import { ParseTreeVisitor } from 'antlr4ts/tree/ParseTreeVisitor';
import { RecognitionException } from 'antlr4ts/RecognitionException';
import { RuleContext } from 'antlr4ts/RuleContext';
import { RuleVersion } from 'antlr4ts/RuleVersion';
import { TerminalNode } from 'antlr4ts/tree/TerminalNode';
import { Token } from 'antlr4ts/Token';
import { TokenStream } from 'antlr4ts/TokenStream';
import { Vocabulary } from 'antlr4ts/Vocabulary';
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl';

import * as Utils from 'antlr4ts/misc/Utils';

import { QueryModificationListener } from './QueryModificationListener';

export class QueryModificationParser extends Parser {
	public static readonly T__0=1;
	public static readonly T__1=2;
	public static readonly T__2=3;
	public static readonly T__3=4;
	public static readonly T__4=5;
	public static readonly T__5=6;
	public static readonly T__6=7;
	public static readonly T__7=8;
	public static readonly T__8=9;
	public static readonly T__9=10;
	public static readonly T__10=11;
	public static readonly T__11=12;
	public static readonly T__12=13;
	public static readonly T__13=14;
	public static readonly T__14=15;
	public static readonly T__15=16;
	public static readonly T__16=17;
	public static readonly T__17=18;
	public static readonly T__18=19;
	public static readonly T__19=20;
	public static readonly T__20=21;
	public static readonly T__21=22;
	public static readonly T__22=23;
	public static readonly T__23=24;
	public static readonly T__24=25;
	public static readonly T__25=26;
	public static readonly ABS=27;
	public static readonly AND=28;
	public static readonly AS=29;
	public static readonly ASC=30;
	public static readonly BIND=31;
	public static readonly BNODE=32;
	public static readonly BOOST=33;
	public static readonly BOUND=34;
	public static readonly CEIL=35;
	public static readonly COALESCE=36;
	public static readonly CONCAT=37;
	public static readonly CONTAINS=38;
	public static readonly DATATYPE=39;
	public static readonly DAY=40;
	public static readonly DESC=41;
	public static readonly ENCODE_FOR_URI=42;
	public static readonly EXISTS=43;
	public static readonly FALSE=44;
	public static readonly FLOOR=45;
	public static readonly GEOMATCH=46;
	public static readonly HOURS=47;
	public static readonly IF=48;
	public static readonly IF_FOLLOWED_BY=49;
	public static readonly IF_FOLLOWS=50;
	public static readonly IN=51;
	public static readonly IRI=52;
	public static readonly ISBLANK=53;
	public static readonly ISIRI=54;
	public static readonly ISLITERAL=55;
	public static readonly ISNUMERIC=56;
	public static readonly ISURI=57;
	public static readonly LANG=58;
	public static readonly LANGMATCHES=59;
	public static readonly LATLON=60;
	public static readonly LCASE=61;
	public static readonly LOSS_TO=62;
	public static readonly MAX_HITS=63;
	public static readonly MD5=64;
	public static readonly MIN_SCORE=65;
	public static readonly MINUTES=66;
	public static readonly MONTH=67;
	public static readonly NEAR=68;
	public static readonly NOT=69;
	public static readonly NOW=70;
	public static readonly OBFUSCATE=71;
	public static readonly OF=72;
	public static readonly OR=73;
	public static readonly RACE_COUNT=74;
	public static readonly RAND=75;
	public static readonly REGEX=76;
	public static readonly REPLACE=77;
	public static readonly ROUND=78;
	public static readonly SAMETERM=79;
	public static readonly SECONDS=80;
	public static readonly SHA1=81;
	public static readonly SHA256=82;
	public static readonly SHA384=83;
	public static readonly SHA512=84;
	public static readonly STR=85;
	public static readonly STRAFTER=86;
	public static readonly STRBEFORE=87;
	public static readonly STRDT=88;
	public static readonly STRENDS=89;
	public static readonly STRLANG=90;
	public static readonly STRLEN=91;
	public static readonly STRSTARTS=92;
	public static readonly STRUUID=93;
	public static readonly SUBJECT=94;
	public static readonly SUBSTR=95;
	public static readonly TEXTMATCH=96;
	public static readonly TIMEZONE=97;
	public static readonly TO_UNIT=98;
	public static readonly TRUE=99;
	public static readonly TZ=100;
	public static readonly UCASE=101;
	public static readonly URI=102;
	public static readonly UUID=103;
	public static readonly WIN_TO=104;
	public static readonly WITHIN=105;
	public static readonly YEAR=106;
	public static readonly YOU_MAY_KNOW=107;
	public static readonly IRI_REF=108;
	public static readonly PNAME_NS=109;
	public static readonly PNAME_LN=110;
	public static readonly BLANK_NODE_LABEL=111;
	public static readonly LANGTAG=112;
	public static readonly INTEGER=113;
	public static readonly DECIMAL=114;
	public static readonly DOUBLE=115;
	public static readonly EXPONENT=116;
	public static readonly STRING_LITERAL1=117;
	public static readonly STRING_LITERAL2=118;
	public static readonly ECHAR=119;
	public static readonly EMPTY_PARENS=120;
	public static readonly ANON=121;
	public static readonly VARNAME=122;
	public static readonly PN_PREFIX=123;
	public static readonly PN_LOCAL=124;
	public static readonly WS=125;
	public static readonly RULE_filter = 0;
	public static readonly RULE_patterns = 1;
	public static readonly RULE_boosters = 2;
	public static readonly RULE_bindings = 3;
	public static readonly RULE_orderBys = 4;
	public static readonly RULE_orderBy = 5;
	public static readonly RULE_transforms = 6;
	public static readonly RULE_transform = 7;
	public static readonly RULE_searchCondition = 8;
	public static readonly RULE_searchConditionAnd = 9;
	public static readonly RULE_searchConditionNot = 10;
	public static readonly RULE_predicate = 11;
	public static readonly RULE_expression = 12;
	public static readonly RULE_expressionAtom = 13;
	public static readonly RULE_builtinCall = 14;
	public static readonly RULE_pattern = 15;
	public static readonly RULE_textMatchParam = 16;
	public static readonly RULE_boost = 17;
	public static readonly RULE_binding = 18;
	public static readonly RULE_featureOrLatLon = 19;
	public static readonly RULE_proximitySpec = 20;
	public static readonly RULE_functionCall = 21;
	public static readonly RULE_rdfLiteral = 22;
	public static readonly RULE_numericLiteral = 23;
	public static readonly RULE_expressionList = 24;
	public static readonly RULE_varRef = 25;
	public static readonly RULE_fieldRef = 26;
	public static readonly RULE_comparisonOp = 27;
	public static readonly RULE_unaryOp = 28;
	public static readonly RULE_factorOp = 29;
	public static readonly RULE_termOp = 30;
	public static readonly RULE_stringLiteral = 31;
	public static readonly RULE_stringLiteralOrVarRef = 32;
	public static readonly RULE_booleanLiteral = 33;
	public static readonly RULE_iriRefOrVarRef = 34;
	public static readonly RULE_numericLiteralOrVarRef = 35;
	public static readonly RULE_iriRef = 36;
	public static readonly RULE_prefixedName = 37;
	public static readonly RULE_blankNode = 38;
	public static readonly ruleNames: string[] = [
		"filter", "patterns", "boosters", "bindings", "orderBys", "orderBy", "transforms", 
		"transform", "searchCondition", "searchConditionAnd", "searchConditionNot", 
		"predicate", "expression", "expressionAtom", "builtinCall", "pattern", 
		"textMatchParam", "boost", "binding", "featureOrLatLon", "proximitySpec", 
		"functionCall", "rdfLiteral", "numericLiteral", "expressionList", "varRef", 
		"fieldRef", "comparisonOp", "unaryOp", "factorOp", "termOp", "stringLiteral", 
		"stringLiteralOrVarRef", "booleanLiteral", "iriRefOrVarRef", "numericLiteralOrVarRef", 
		"iriRef", "prefixedName", "blankNode"
	];

	private static readonly _LITERAL_NAMES: (string | undefined)[] = [
		undefined, "';'", "','", "'|'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
		"'='", "'^^'", "'$'", "'>'", "'>='", "'<'", "'<='", "'!='", "'~'", "'~*'", 
		"'!~'", "'!~*'", "'-'", "'+'", "'*'", "'/'", "'%'"
	];
	private static readonly _SYMBOLIC_NAMES: (string | undefined)[] = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, "ABS", 
		"AND", "AS", "ASC", "BIND", "BNODE", "BOOST", "BOUND", "CEIL", "COALESCE", 
		"CONCAT", "CONTAINS", "DATATYPE", "DAY", "DESC", "ENCODE_FOR_URI", "EXISTS", 
		"FALSE", "FLOOR", "GEOMATCH", "HOURS", "IF", "IF_FOLLOWED_BY", "IF_FOLLOWS", 
		"IN", "IRI", "ISBLANK", "ISIRI", "ISLITERAL", "ISNUMERIC", "ISURI", "LANG", 
		"LANGMATCHES", "LATLON", "LCASE", "LOSS_TO", "MAX_HITS", "MD5", "MIN_SCORE", 
		"MINUTES", "MONTH", "NEAR", "NOT", "NOW", "OBFUSCATE", "OF", "OR", "RACE_COUNT", 
		"RAND", "REGEX", "REPLACE", "ROUND", "SAMETERM", "SECONDS", "SHA1", "SHA256", 
		"SHA384", "SHA512", "STR", "STRAFTER", "STRBEFORE", "STRDT", "STRENDS", 
		"STRLANG", "STRLEN", "STRSTARTS", "STRUUID", "SUBJECT", "SUBSTR", "TEXTMATCH", 
		"TIMEZONE", "TO_UNIT", "TRUE", "TZ", "UCASE", "URI", "UUID", "WIN_TO", 
		"WITHIN", "YEAR", "YOU_MAY_KNOW", "IRI_REF", "PNAME_NS", "PNAME_LN", "BLANK_NODE_LABEL", 
		"LANGTAG", "INTEGER", "DECIMAL", "DOUBLE", "EXPONENT", "STRING_LITERAL1", 
		"STRING_LITERAL2", "ECHAR", "EMPTY_PARENS", "ANON", "VARNAME", "PN_PREFIX", 
		"PN_LOCAL", "WS"
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(QueryModificationParser._LITERAL_NAMES, QueryModificationParser._SYMBOLIC_NAMES, []);

	@Override
	@NotNull
	public get vocabulary(): Vocabulary {
		return QueryModificationParser.VOCABULARY;
	}

	@Override
	public get grammarFileName(): string { return "QueryModification.g4"; }

	@Override
	public get ruleNames(): string[] { return QueryModificationParser.ruleNames; }

	@Override
	public get serializedATN(): string { return QueryModificationParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(QueryModificationParser._ATN, this);
	}
	@RuleVersion(0)
	public filter(): FilterContext {
		let _localctx: FilterContext = new FilterContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, QueryModificationParser.RULE_filter);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 78;
			this.searchCondition();
			this.state = 79;
			this.match(QueryModificationParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public patterns(): PatternsContext {
		let _localctx: PatternsContext = new PatternsContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, QueryModificationParser.RULE_patterns);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 81;
			this.pattern();
			this.state = 86;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===QueryModificationParser.T__0) {
				{
				{
				this.state = 82;
				this.match(QueryModificationParser.T__0);
				this.state = 83;
				this.pattern();
				}
				}
				this.state = 88;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 89;
			this.match(QueryModificationParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public boosters(): BoostersContext {
		let _localctx: BoostersContext = new BoostersContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, QueryModificationParser.RULE_boosters);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 91;
			this.boost();
			this.state = 96;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===QueryModificationParser.T__0) {
				{
				{
				this.state = 92;
				this.match(QueryModificationParser.T__0);
				this.state = 93;
				this.boost();
				}
				}
				this.state = 98;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 99;
			this.match(QueryModificationParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public bindings(): BindingsContext {
		let _localctx: BindingsContext = new BindingsContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, QueryModificationParser.RULE_bindings);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 101;
			this.binding();
			this.state = 106;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===QueryModificationParser.T__0) {
				{
				{
				this.state = 102;
				this.match(QueryModificationParser.T__0);
				this.state = 103;
				this.binding();
				}
				}
				this.state = 108;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 109;
			this.match(QueryModificationParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public orderBys(): OrderBysContext {
		let _localctx: OrderBysContext = new OrderBysContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, QueryModificationParser.RULE_orderBys);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 111;
			this.orderBy();
			this.state = 116;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===QueryModificationParser.T__0 || _la===QueryModificationParser.T__1) {
				{
				{
				this.state = 112;
				_la = this._input.LA(1);
				if ( !(_la===QueryModificationParser.T__0 || _la===QueryModificationParser.T__1) ) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 113;
				this.orderBy();
				}
				}
				this.state = 118;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 119;
			this.match(QueryModificationParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public orderBy(): OrderByContext {
		let _localctx: OrderByContext = new OrderByContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, QueryModificationParser.RULE_orderBy);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 121;
			this.expression(0);
			this.state = 123;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===QueryModificationParser.ASC || _la===QueryModificationParser.DESC) {
				{
				this.state = 122;
				_la = this._input.LA(1);
				if ( !(_la===QueryModificationParser.ASC || _la===QueryModificationParser.DESC) ) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				}
			}
